<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:background="@color/primary_blue_light"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_left_solid_full"
            app:tint="@color/white"
            android:contentDescription="@string/back_task_list" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/task_history"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"/>

        <ImageButton
            android:id="@+id/btnFilter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_filter_solid_full"
            app:tint="@color/white"
            android:contentDescription="@string/task_filter" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>