<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:background="@color/primary_blue_light"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_left_solid_full"
            app:tint="@color/white"
            android:contentDescription="@string/back_block_list" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="Block Detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"/>

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_pen_solid_full"
            app:tint="@color/white"
            android:contentDescription="@string/edit_block" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_trash_solid_full"
            app:tint="@color/white"
            android:contentDescription="@string/delete_block" />

        <ImageButton
            android:id="@+id/btnSuccess"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_check_solid_full"
            app:tint="@color/white"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:contentDescription="@string/block_created_successfully" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_header">

        <ImageView
            android:id="@+id/imgApp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/waifu_2"
            android:contentDescription="App icon"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>